# Taggin

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: docs.yml  test.yml
api/: index.html
docs/: api.md  examples.md  index.md
examples/: index.html
search/: search_index.json
site/: index.html
site/api/: index.html
site/examples/: index.html
site/search/: search_index.json
taggin/: __init__.py  cli.py  log.py
tests/: test_cli.py  test_log.py  test_logging_utils.py
