#[build-system]
#requires = ["setuptools>=64", "wheel"]
#build-backend = "setuptools.build_meta"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taggin"
version = "0.1.2"
description = "Taggin logging with dynamic tags, structured storage, and CLI search."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "ESPR3SS0", email = "98864173+ESPR3SS0@users.noreply.github.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "arrow>=1.4.0",
  "cyclopts>=4.2.4",
  "pandas>=2.3",
  "rich>=13.9.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.1",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "pre-commit>=3.8.0",
  "ruff>=0.6.9",
  "pyarrow>=12.0.0",
  "build>=1.3.0",
  "twine>=6.2.0",
]

[project.scripts]
taggin = "taggin.cli:main"


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
pytest = ">=9.0.2,<10"



[tool.setuptools.packages.find]
include = ["taggin*"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "scripts/**/*.py", "taggin/**/*.py"]



[tool.ruff.lint]
# Defaults: E/F (pycodestyle/pyflakes), I (isort), UP (pyupgrade),
# B (bugbear), SIM (simplify), C4 (comprehensions), Q (quotes), PL (pylint-lite), RUF (extra rules), D (docstrings)
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "Q", "PL", "RUF", "D"]
ignore = ["E501", "C901", "PLR0915", "PLR0912", "PLR0913", "PLR0917"]  # let the formatter manage line length
extend-select = ["SIM108", "D103", "RUF005", "D101"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "D"]  # magic numbers in tests are fine

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.ruff.lint.isort]
known-first-party = ["taggin"]
